<package>
  <name>turtlebot_nav_gazebo</name>
  <maintainer email="daqing_yi@byu.edu">walter</maintainer>
  <description>
    Turtlebot navigation - Gazebo
  </description>
  <version>0.0.0</version>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>message_runtime</run_depend>
  
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend> 
 
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend> 
</package>
